# GMF

./: CMakeLists.txt  MediaFramework.sln  MediaGraph.xml  README.md  config.h  pipeline.xml  pipeline1.xml  plugins.xml
Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  LogManager.h  Logger.cpp  Logger.h  ModuleLoader.cpp  ModuleLoader.h  SEvent.cpp  SEvent.h  SMutex.cpp  SMutex.h  SThread.h  SThread_c11.cpp  SThread_linux.cpp  SThread_win.cpp  STimer.cpp  STimer.h  Tree.h  Util.cpp  Util.h
Debug/: pipeline - 副本.xml  pipeline.xml  plugins.xml
Debug/config/: MediaGraph.xml  plugins.xml
LocalConfig/: ConfigManager.cpp  ConfigManager.h  ConfigSetting.h  LocalConfig.vcxproj  LocalConfig.vcxproj.filters  PipelineManager.cpp  PipelineManager.h  PipelineXMLHelper.cpp  PipelineXMLHelper.h
MediaBasePlugin/: AudioFrameBuffer.cpp  AudioFrameBuffer.h  BasePlugin.cpp  CMakeLists.txt  D3DVideoRender.cpp  D3DVideoRender.h  DSoundRender.cpp  DSoundRender.h  DupStreamFilter.cpp  DupStreamFilter.h  FFAACEncoder.cpp  FFAACEncoder.h  FFAudioDecoder.cpp  FFAudioResample.cpp  FFCameraCapture.cpp  FFComplexFilter.cpp  FFH264Encoder.h  FFScreenCapture.h  FFSimpleFilter.cpp  FFVideoScaler.cpp  FileSink.cpp  FileSink.h  FileSrc.cpp  FileSrc.h  GDIVideoCapture.cpp  GDIVideoCapture.h  MediaBasePlugin.vcxproj  MicphoneCapture.h  RTPSrc.cpp  RTSPSink.cpp  SDLVideoRender.h  SpeakerCapture.cpp  SpeakerCapture.h  common.h
MediaCore/: AudioCodec.cpp  AudioCodec.h  CMakeLists.txt  IElementFactory.h  Media.cpp  Media.h  MediaBaseFilter.cpp  MediaBaseFilter.h  MediaBaseSink.cpp  MediaBaseSink.h  MediaBaseSrc.cpp  MediaBaseSrc.h  MediaBin.cpp  MediaBin.h  MediaBuffer.cpp  MediaBuffer.h  MediaBus.cpp  MediaBus.h  MediaCore.aps  MediaCore.vcxproj  MediaCore.vcxproj.filters  MediaDefs.h  MediaElement.cpp  MediaElement.h  MediaMessage.h  MediaPipeline.cpp  MediaPort.cpp  MediaPort.h  MessageBus.cpp  MessageBus.h  MirrorPort.cpp  MirrorPort.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  VideoCodec.cpp  VideoCodec.h  VideoRender.cpp  VideoRender.h  (+5 more)
MediaCore/plugin/: AudioFrameBuffer.cpp  AudioFrameBuffer.h  CorePlugin.cpp  D3DVideoRender.cpp  D3DVideoRender.h  DSoundRender.cpp  DSoundRender.h  DupStreamFilter.cpp  DupStreamFilter.h  FileSink.cpp  FileSink.h  FileSrc.cpp  FileSrc.h  GDIVideoCapture.cpp  GDIVideoCapture.h  MediaBin.cpp  MediaBin.h  MediaPipeline.cpp  MediaPipeline.h  MicphoneCapture.h  RTPSrc.cpp  RTPSrc.h  SpeakerCapture.cpp  SpeakerCapture.h
MediaFFPlugin/: BasePlugin.cpp  FFAACEncoder.cpp  FFAACEncoder.h  FFAudioDecoder.cpp  FFAudioDecoder.h  FFAudioResample.cpp  FFAudioResample.h  FFCameraCapture.cpp  FFCameraCapture.h  FFComplexFilter.cpp  FFComplexFilter.h  FFH264Encoder.cpp  FFH264Encoder.h  FFMediaStorage.cpp  FFMediaStorage.h  FFRTSPServer.cpp  FFRTSPServer.h  FFScreenCapture.cpp  FFScreenCapture.h  FFSimpleFilter.cpp  FFSimpleFilter.h  FFStreamingSrc.cpp  FFStreamingSrc.h  FFVideoDecoder.cpp  FFVideoDecoder.h  FFVideoScaler.cpp  FFVideoScaler.h  FFmpegPlugin.cpp  LiveRTSPSink.cpp  LiveRTSPSink.h  MediaFFPlugin.vcxproj  MediaFFPlugin.vcxproj.filters  MicphoneCapture.cpp  RTPSrc.h  RTSPSink.h  SDLVideoRender.cpp  VideoOverlayFilter.cpp  VideoOverlayFilter.h  common.h
Release/: plugins.xml
csharp_interface/: MediaCore.cs  SWIGTYPE_p_f_int_p_q_const__char__void.cs
example1/: ReadMe.txt  Resource.h  example1.aps  example1.cpp  example1.rc  example1.vcxproj  example1.vcxproj.filters
example2/: example2.vcxproj  main.cpp
example3/: example3.vcxproj  main.cpp
example4/: example4.vcxproj  main.cpp
example5/: PipelineLoader.cpp  PipelineLoader.h  example5.vcxproj  main.cpp
example6/: example6.vcxproj  main.cpp
rtspplayer/: MediaPlayer.cpp  MediaPlayer.h  ReadMe.txt  resource.h  rtspplayer.aps  rtspplayer.cpp  rtspplayer.h  rtspplayer.rc  rtspplayer.vcxproj  rtspplayer.vcxproj.filters  rtspplayer.xml  rtspplayerDlg.cpp  rtspplayerDlg.h  stdafx.cpp
rtspplayer/res/: rtspplayer.rc2
rtspplayertest/: Form1.Designer.cs  Form1.cs  MediaCorePINVOKE.cs  Program.cs  SWIGTYPE_p__gmf_player.cs  rtspplayertest.csproj
rtspplayertest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
third_part/LiveMediaServer/include/: LiveStreamIO.h  MediaServer.h
third_part/jrtplib/include/jrtplib3/: rtpconfig.h  rtpexternaltransmitter.h  rtppollthread.h  rtprandomrand48.h  rtpsession.h  rtpudpv4transmitter.h  rtpudpv6transmitter.h
third_part/jrtplib/lib/: jrtplib.lib
third_part/log4cpp/lib/: log4cpp.lib
